--- a/web mars/index.html
+++ b/web mars/index.html
@@ -76,7 +76,7 @@
                 <h1>Mars Angelo Ladia</h1><hr>
                 <h3>Student | Information Technology</h3>
             </div>
-            <img src="/image/IMG_20221002_152800.jpg" alt="Mars Pic">
+            <img src="https://github.com/marsangelo12/resume/blob/resume/web%20mars/image/IMG_20221002_152800.jpg?raw=true" alt="Mars Pic">
         </header>
 
         <h2>Personal Information</h2>
